--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-minimal
+plugins:
+  - jekyll-feed
+title: Michael's Matter Queue
+description: Welcome to my blog
+author: Michael Arthur
+feed:
+  path: /matter/rss.xml
