--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ title: Michael's Matter Queue
 description: Welcome to my blog
 author: Michael Arthur
 feed:
-  path: /matter/rss.xml
+  path: /matterpod/rss.xml
